--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
             <img id="imagem-4" src="assets/imagens/imagem 4.png" alt="imagem-4">
 
-            <img id="imagem-5" src="assets/imagens/imagem 5.png" alt="imagem-5">
+            <a href="https://bit.ly/3q3fo0X" target="_blank" rel="noopener noreferrer"><img id="imagem-5" src="assets/imagens/imagem 5.png" alt="imagem-5"></a>
             
         </div>
 
